results/SpecGenBench/2-shot/log-IntCube-2023_11_28_09_21_15.txt
public class IntCube {

    //@ ensures \result == x * x * x;
    public static int cubeOf(int x) {
        boolean neg = false;
        //@ maintaining neg ==> \result == -x * x * x;
        //@ maintaining !neg ==> \result == x * x * x;
        if(x < 0) {
            neg = true;
            x = -x;
        }
        int res = 0;
        //@ maintaining res == i * x * x * x + j * x * x + k * x;
        //@ decreases x - i;
        for(int i = 0; i < x; i++) {
            //@ maintaining res == i * x * x * x + j * x * x + k * x;
            //@ decreases x - j;
            for(int j = 0; j < x; j++) {
                //@ maintaining res == i * x * x * x + j * x * x + k * x;
                //@ decreases x - k;
                for(int k = 0; k < x; k++) {
                    res = res + 1;
                }
            }
        }
        return (neg ? -res : res);
    }

}
/home/max/Documents/JMLGPT/tmp/IntCube.java:6: error: Loop specifications must immediately precede a loop statement
        //@ maintaining neg ==> \result == -x * x * x;
            ^
1 error

